<resources>
    <string name="app_name">BankAccount</string>

    <string name="hint_what_is_your_password">Password</string>
    <string name="label_id_bank_account">What is your password ?</string>
    <string name="label_button_validation_id">Log In</string>
    <string name="label_authenticate_or">or</string>
    <string name="label_textView_login_message">Welcome to your Bank Account App !</string>

    <string name="label_textView_account_message">Welcome to your List of Account !</string>
    <string name="refresh_button">Refresh</string>

    <string name="label_textView_about_message">Welcome to your Bank Account App - About Section !</string>
    <string name="label_author">Developer : Antoine Grandin</string>
    <string name="label_author_class">Class : IOS2 - ESILV</string>
    <string name="label_version">Version : 1.0</string>
    <string name="title_about">About</string>

    <string name="label_textView_pin_change_message">Welcome to your Bank Account App - Please change your password :</string>
    <string name="label_new_password">Enter your new password :</string>
    <string name="label_new_password_confirmation">Please re-enter your password :</string>
    <string name="label_button_change_password">Confirmation</string>
</resources>