<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/homepage_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/lock_fingerprint_white"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textView_login_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/homepage_image"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_id_bank_account"
        android:textSize="18sp"
        android:layout_below="@+id/textView_login_message"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/hint_what_is_your_password"
        android:ems="9"
        android:hint="@string/hint_what_is_your_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_validation_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_validation_id"
        android:layout_below="@+id/textView_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_authenticate_or"
        android:textSize="18sp"
        android:layout_below="@+id/button_validation_id"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fingerprint_ImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/fingerprint_logo"
        android:layout_below="@+id/textViewOr"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_resetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:contentDescription="@string/title_about"
        android:focusable="true" />
</RelativeLayout>
