<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePinActivity"
    android:padding="50dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/homepage_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/lock_fingerprint_white"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_change_password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textView_pin_change_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/homepage_image"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_new_password"
        android:textSize="18sp"
        android:layout_below="@+id/textView_change_password_message"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editText_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_what_is_your_password"
        android:ems="9"
        android:hint="@string/hint_what_is_your_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_below="@+id/textView_change_password"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_change_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_new_password_confirmation"
        android:textSize="18sp"
        android:layout_below="@+id/editText_new_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editText_new_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_what_is_your_password"
        android:ems="9"
        android:hint="@string/hint_what_is_your_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_below="@+id/textView_change_password_confirmation"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_validation_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_change_password"
        android:layout_below="@+id/editText_new_password_confirmation"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>